--- a/APM-Demo0/src/app/products/product-list/product-list.component.html
+++ b/APM-Demo0/src/app/products/product-list/product-list.component.html
@@ -11,7 +11,7 @@
               *ngFor="let product of products"
               [ngClass]="{'active': product?.id === selectedProduct?.id}"
               (click)="productSelected(product)">{{ product.productName }}
-        <ng-container *ngIf="displayCode$ | async">
+        <ng-container *ngIf="displayCode">
           ({{ product.productCode }})
         </ng-container>
       </button>
@@ -25,7 +25,7 @@
           <input class="form-check-input"
                  type="checkbox"
                  (change)="checkChanged()"
-                 [checked]="displayCode$ | async">
+                 [checked]="displayCode">
           Display Product Code
         </label>
       </div>
